--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 									<h1>About Me</h1>
 									<div class="box">
 									
-									<p>Welcome to my personal webpage! 
+									<p>Welcome to my personal webspace! <br />
+										Please visit <a href="https://msudhakar.com/" target="_blank">my feature website</a> for updated details.
 										<br /><br />
 										This is <b>Mahesh Sudhakar</b>, 
 										a recent M.Eng graduate from the Department of Electrical and Computer Engineering (ECE) at the University of Toronto.
